--- a/app/public/home.html
+++ b/app/public/home.html
@@ -8,16 +8,18 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+	<link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
 
 	<!-- Font Awesome Glyphicons -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 	<style>
 	body{
-		background-image: url("../background.jpg");
+		background-image: url("https://hd.unsplash.com/photo-1455734729978-db1ae4f687fc");
 		background-position: center center;
 	    background-repeat: no-repeat;
 	    background-attachment:fixed;
 	    background-size: cover;
+	    font-family: 'Shadows Into Light', cursive;
 	}
 	.container {
 		 background-color: rgba(255, 255, 255, 0.5);
@@ -34,7 +36,7 @@
 			<br>
 
 			<div class="text-center">
-				<a href="survey.html"><button type="button" class="btn btn-md btn-danger"><h4><span class="glyphicon glyphicon-list-alt"></span> Take the Survey</h4></button></a>
+				<a href="/survey"><button type="button" class="btn btn-md btn-danger"><h4><span class="glyphicon glyphicon-list-alt"></span> Take the Survey</h4></button></a>
 			</div>
 
 		</div>
