--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+	<link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
 
 	<!-- Font Awesome Glyphicons -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
@@ -19,14 +20,16 @@
 
 	<style>
 	body{
-		background-image: url("../background.jpg");
+		background-image: url("https://hd.unsplash.com/photo-1455734729978-db1ae4f687fc");
 		background-position: center center;
 	    background-repeat: no-repeat;
 	    background-attachment:fixed;
 	    background-size: cover;
+	    font-family: 'Shadows Into Light', cursive;
 	}
 	.container {
 		 background-color: rgba(255, 255, 255, 0.5);
+		 width: 800px;
 	}
 	</style>
 </head>
@@ -36,19 +39,24 @@
 		<h1 class="text-center">Survey Questions</h1>
 
 		<hr>
-
-		<h3><strong> About You </strong></h3>
+		<div class="row">
+		<div class="col-lg-4">
 		<h4> Name </h4>
-		<input type="text" name="" id="name" class="form-control" placeholder="First Last" required></input>
-
-
+		<input type="text" name="" id="name" class="form-control" placeholder="First & Last" required></input>
+		</div>
+		</div>
+		<div class="row">
+		<div class="col-lg-4">
 		<h4> Link to Photo </h4>
 		<input type="text" name="" id="photo" class="form-control" required></input>
-
+		</div>
+		</div>
+		
+		
 		<hr>
 
-		<h3><strong>Question One</strong></h3>
-			<h4> You enjoy big events and parties to attend </h4>
+		
+			<h3><strong>One. </strong> You enjoy big events and parties to attend </h3>
 				<select data-placeholder="" class="chosen-select" id="q1">
 					<option value=""></option>
 					<option value="1">1 (Strongly Disagree)</option>
@@ -58,8 +66,8 @@
 					<option value="5">5 (Strongly Agree)</option>
 				</select>
 
-		<h3><strong>Question Two</strong></h3>
-			<h4> You enjoy low key hangout sessions with a few of your closest friends </h4>
+		
+			<h3><strong>Two. </strong> You enjoy low key hangout sessions with a few of your closest friends </h3>
 				<select data-placeholder="" class="chosen-select" id="q2">
 					<option value=""></option>
 					<option value="1">1 (Strongly Disagree)</option>
@@ -69,8 +77,8 @@
 					<option value="5">5 (Strongly Agree)</option>
 				</select>
 		
-		<h3><strong>Question Three</strong></h3>
-		<h4> You rarely get texts or calls </h4>
+		
+		<h3><strong>Three. </strong> You rarely get texts or calls </h3>
 			<select data-placeholder="" class="chosen-select" id="q3">
 				<option value=""></option>
 				<option value="1">1 (Strongly Disagree)</option>
@@ -80,8 +88,8 @@
 				<option value="5">5 (Strongly Agree)</option>
 			</select>
 
-		<h3><strong>Question Four</strong></h3>
-		<h4> You love going out on the town to try new things. </h4>
+		
+		<h3> <strong>Four. </strong>You love going out on the town to try new things. </h3>
 			<select data-placeholder="" class="chosen-select" id="q4">
 				<option value=""></option>
 				<option value="1">1 (Strongly Disagree)</option>
@@ -91,8 +99,7 @@
 				<option value="5">5 (Strongly Agree)</option>
 			</select>
 
-		<h3><strong>Question Five</strong></h3>
-		<h4> Your ideal Friday night would include your pets, a drink, and Netflix. </h4>
+		<h3><strong>Five. </strong>Your ideal Friday night would include your pets, a drink, and Netflix.</h3>
 			<select data-placeholder="" class="chosen-select" id="q5">
 				<option value=""></option>
 				<option value="1">1 (Strongly Disagree)</option>
@@ -102,8 +109,7 @@
 				<option value="5">5 (Strongly Agree)</option>
 			</select>
 
-		<h3><strong>Question Six</strong></h3>
-		<h4> You love to travel and explore new places. </h4>
+		<h3><strong>Six. </strong>You love to travel and explore new places.</h3>
 			<select data-placeholder="" class="chosen-select" id="q6">
 				<option value=""></option>
 				<option value="1">1 (Strongly Disagree)</option>
@@ -113,8 +119,7 @@
 				<option value="5">5 (Strongly Agree)</option>
 			</select>
 
-		<h3><strong>Question Seven</strong></h3>
-		<h4> You prefer to hangout with your signifcant other and no one else </h4>
+		<h3><strong>Seven. </strong>You prefer to hangout with your signifcant other and no one else.</h3>
 			<select data-placeholder="" class="chosen-select" id="q7">
 				<option value=""></option>
 				<option value="1">1 (Strongly Disagree)</option>
@@ -124,8 +129,7 @@
 				<option value="5">5 (Strongly Agree)</option>
 			</select>
 
-		<h3><strong>Question Eight</strong></h3>
-		<h4> You're really into eating delicious food </h4>
+		<h3><strong>Eight. </strong> You're really into eating delicious food.</h3>
 			<select data-placeholder="" class="chosen-select" id="q8">
 				<option value=""></option>
 				<option value="1">1 (Strongly Disagree)</option>
@@ -135,8 +139,7 @@
 				<option value="5">5 (Strongly Agree)</option>
 			</select>
 
-		<h3><strong>Question Nine</strong></h3>
-		<h4> You prefer lounging around in sweatpants </h4>
+		<h3><strong>Nine. </strong>You prefer lounging around in sweatpants.</h3>
 			<select data-placeholder="" class="chosen-select" id="q9">
 				<option value=""></option>
 				<option value="1">1 (Strongly Disagree)</option>
@@ -146,8 +149,7 @@
 				<option value="5">5 (Strongly Agree)</option>
 			</select>
 
-		<h3><strong>Question Ten</strong></h3>
-		<h4> Sports games are on the top of your weekly list </h4>
+		<h3><strong>Ten. </strong>Sports games are on the top of your weekly list.</h3>
 			<select data-placeholder="" class="chosen-select" id="q10">
 				<option value=""></option>
 				<option value="1">1 (Strongly Disagree)</option>
