--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -166,9 +166,17 @@
 			<button type="submit" class="btn btn-danger btn-lg" id="submit"><i class="fa fa-check-circle" aria-hidden="true"></i> Submit</button>
 
 			<hr>
+		<div class="text-center">
+				<a href="/home"><h3><span class="glyphicon glyphicon-home"></span> Home</h3></a>
+		</div>	
 
-
-	</div>		
+	</div>	
+			<footer class="footer">
+			  <div class="container">
+				  <p class="text-center"><a href="/api/friends">API Friends List</a> </p>
+			  </div>
+			</footer>
+	
 
 	<!-- Modal -->
 	<div id="resultsModal" class="modal fade" role="dialog">
@@ -195,9 +203,64 @@
 		</div>
 	</div>
 
+<!-- Javascript-->
 	<script type="text/javascript">
 
+	var config = {
+
+		'.chosen-select': {},
+		'.chosen-select-deselect': { allow_single_deselect: true,},
+		'.chosen-select-no-single': { disable_search_threshold: 10,},
+		'.chosen-select-no-results': {no_result_text: 'nothing found'},
+	}
+	for (var selector in config){
+		$(selector).chosen(config[selector]);
+	}
+
+
+		// capture form input
+		$("#submit").on("click", function(){
+			var isValid = true;
+			validate();
+				
+				function validate(){
+						// if form is blank change to false
+						$('.form-control').each(function(){
+							if($(this).val()=='')
+								isValid = false;
+						});
+
+						$('.chosen-select').each(function(){
+							if($(this).val() ==='')
+								isValid = false;
+						})
+					return isValid;	
+				};
+				// if filled out form validate form
+				if(isValid){
+					var userData = {
+						name: $("#name").val(),
+						photo: $("#photo").val(),
+						scores: [ $("#q1").val(),  $("#q2").val(), $("#q3").val(), $("#q4").val(), $("#q5").val(), $("#q6").val(), $("#q7").val(), $("#q8").val(), $("#q9").val(), $("#q10").val() ]
+					}
+					// load on any window url
+					var currentURL = window.location.origin;
+					// post data to new screen
+				    $.post(currentURL + "/api/friends", userData, function(data){ 
+				    	$("#matchName").text(data.name);
+				    	$("#matchImg").attr("src", data.photo);
+				    	$("#resultsModal").modal('toggle');
+				    });
+				} else {
+					alert("Please fill out all form fields");
+				}
+
+				return false;
+
+		});
 	
 	</script>
 </body>
 </html>
+
+
